# lightspeed-agentic-sandbox

./: .gitignore  AGENTS.md  CLAUDE.md  Containerfile  Containerfile.dev  Makefile  OWNERS  README.md  artifacts.lock.yaml  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-build.txt  requirements.aarch64.txt  requirements.x86_64.txt
.ai/spec/: README.md  chat-api.md  configuration.md  provider-contract.md  query-api.md
.ai/spec/how/: README.md  provider-architecture.md
.ai/spec/what/: README.md  configuration.md  provider-contract.md  run-api.md
.cursor/rules/: asdlc.mdc
.github/workflows/: e2e-openai.yml  test-gha.yml
.tekton/: lightspeed-agentic-sandbox-pull-request.yaml  lightspeed-agentic-sandbox-push.yaml
evals/: README.md  conftest.py  credentials.py  pytest.ini  report.py  run.sh  runner.py  schemas.py  test_basic_query.py  test_skill_invocation.py  test_structured_output.py  test_tool_usage.py
evals/workspace/skills/calculator/: SKILL.md
evals/workspace/skills/formatter/: SKILL.md
evals/workspace/skills/lookup/: SKILL.md
evals/workspace/tools/: calc.sh  compute.sh  greet.sh  lookup-data.sh
scripts/: e2e-containers.sh  start-containers.sh
src/lightspeed_agentic/: __init__.py  factory.py  logging.py  tools.py  types.py
src/lightspeed_agentic/providers/: claude.py  deepagents.py  gemini.py  openai.py
src/lightspeed_agentic/routes/: __init__.py  chat.py  models.py  query.py
tests/: __init__.py  conftest.py  test_factory.py  test_logging.py  test_routes.py  test_tools.py  test_types.py
tests/e2e/: __init__.py  config.env  conftest.py  credentials.py  pytest.ini  runner.py  schemas.py  schemas_contract.py  test_chat_sse.py  test_schema_compliance.py  test_skill_invocation.py  test_skills_bdd.py  test_structured_output_bdd.py
tests/e2e/features/: chat_sse.feature  schema_compliance.feature  skill_invocation.feature  skills.feature  structured_output.feature
tests/e2e/steps/: __init__.py  given.py  then.py  when.py
(+3 files in other folders)
